--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
 
 
 </head>
-
 <body itemscope itemtype="http://schema.org/WebPage" lang="zh-Hans">
 
   
@@ -623,6 +622,10 @@
   
 
   
+
+  <script type="text/javascript" src="/js/src/love.js"></script>
+
+<script type="text/javascript" src="/js/src/particle.js"></script>
 
 </body>
 </html>
