--- a/contract.html
+++ b/contract.html
@@ -104,7 +104,7 @@
 <body>
 
 <div id="app">
-    <my-header custom-title="Contract" custom-fixed>
+    <my-header custom-title="通讯录" custom-fixed>
         <button @touchstart="backBtn" slot="left">返回</button>
         <button @touchstart="homeBtn" slot="right">首页</button>
     </my-header>
